// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyFormDialog Button create privateKey operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active primary v-btn v-btn--text theme--light v-size--default" data-test="createKey-btn"><span class="v-btn__content">
          Add private Key
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Button create privateKey owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active primary v-btn v-btn--text theme--light v-size--default" data-test="createKey-btn"><span class="v-btn__content">
          Add private Key
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Button create publicKey operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn--active primary v-btn v-btn--disabled v-btn--text theme--light v-size--default" data-test="createKey-btn"><span class="v-btn__content">
          Add public Key
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Button create publicKey owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active primary v-btn v-btn--text theme--light v-size--default" data-test="createKey-btn"><span class="v-btn__content">
          Add public Key
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Dialog edit privateKey operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Dialog edit privateKey owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`KeyFormDialog Dialog edit publicKey operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Dialog edit publicKey owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`KeyFormDialog Icon edit privateKey operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Icon edit privateKey owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Icon edit publicKey operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyFormDialog Icon edit publicKey owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Edit
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">edit</i></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
